# neurobench

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API.md  API.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  DVS_SNN_untrained.pt  NOTICE  README.md  README.rst  RELEASE.rst  automotive.py  leaderboard.md  leaderboard.rst  main.py  neurobench.code-workspace  neurobench_test.ipynb  neurobench_test.py  pareto.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  test
.github/workflows/: publish-distribution.yaml  python-style-check.yaml  python-tests.yaml
Neuronbench/Evaluate/: get_mAP.ipynb  snn_metric.ipynb
Neuronbench/train_RED/: run.py  trainer.py
Neuronbench/train_hybrid_spikingRED/: run.py
Neuronbench/utils/: data_preprocess.py  dataset.py  models.py  modules.py  visualization.ipynb
data/: dataloader.py  dataset.py
docs/: .readthedocs.yaml  api.rst  conf.py  custom_metrics.rst  index.rst  neurobench.accumulators.rst  neurobench.benchmarks.rst  neurobench.datasets.rst  neurobench.models.rst  neurobench.postprocessing.rst  neurobench.preprocessing.rst  readme.rst  requirements.txt
docs/Tutorials/: MG_tutorial.ipynb  benchmark.gsc.rst  neurobench.dvs.rst  neurobench.gsc.rst  neurobench.mg.rst  neurobench.pma.rst  neurobench.primate.rst  tutorial_neurobench.dvs.rst  tutorial_neurobench.gsc.rst  tutorial_neurobench.mg.rst  tutorial_neurobench.pma.rst  tutorials.rst
docs/metrics/: index.rst
docs/metrics/data_metrics/: activation_sparsity.rst  classification_accuracy.rst  coco_map.rst  index.rst  mse.rst  multiply_accumulates.rst  r2.rst  smape.rst  synaptic_operations.rst
docs/metrics/static_metrics/: connection_sparsity.rst  index.rst  model_execution_rate.rst  model_footprint.rst  model_size.rst  parameter_count.rst
docs/metrics/workload_metrics/: activation_sparsity.rst  classification_accuracy.rst  coco_map.rst  index.rst  membrane_updates.rst  mse.rst  neuron_operations.rst  r2.rst  smape.rst  synaptic_operations.rst
docs/tutorial/: index.rst
docs/tutorials/: tutorial_neurobench.dvs.rst  tutorial_neurobench.gsc.rst  tutorial_neurobench.mg.rst  tutorial_neurobench.pma.rst  tutorial_neurobench.primate.rst  tutorials.rst
examples/cartpole/: agents.py  benchmark.py
examples/cartpole/model_data/: ANN_in128x2out_50e3_20hz.pt  ANN_in128x2out_50e3_20hz_lower_entropy_loss.pt  ANN_in248out_50e3_0gain.pt  SNN128128_20000.pt  SNN_in246out_50e3_drone.pt  SNN_in248out_25e3_0gain_higher_leaks_pruned_full.pt  model_MountainCar-v0.pt
examples/closed_loop_ops/: OPS_model_state_dict.pth  model.py  neuron1.csv  ops_benchmark_example.py  ops_tutorial.ipynb  train.py
examples/custom_metrics/: NICE_custom_metrics.ipynb  README.md  average_activity_metric.py  gsc_activity_tutorial.py
examples/dvs_gesture/: DVS_Gesture_tutorial.ipynb  benchmark_snn.py  snn.py  train_snn.py
examples/eeg_mi/: Makefile  README.md  benchmark.py  model.py  train.py
examples/gsc/: GSC_tutorial.ipynb  benchmark_ann.py  benchmark_snn.py  train_ANN.py  train_SNN.py
examples/mackey_glass/: MG_tutorial.ipynb  README.md  echo_state_network.py  esn_benchmark.py  lstm_benchmark.py  lstm_model.py
examples/mswc_fscil/: MSWC_tutorial.ipynb  mswc_fscil.py
examples/nehar/: LICENSE.rst  NeHAR.ipynb  SCNN.py  benchmark.py  training.py
examples/obj_detection/: Object_Detection_tutorial.ipynb  README.md  benchmark.py  modules.py  training_RED.py  training_utils.py
examples/primate_reaching/: Primate_Reaching_tutorial.ipynb  README.md  benchmark_2d_ann.py  benchmark_3d_ann.py  benchmark_SNN2.py  benchmark_snn_3.py
gc_neuron_list/: gc_neuron1.csv  gc_neuron2.csv  gc_neuron3.csv
main/: MackeyGlass-ESN.py  ann_main.py
model/: ANN_model.py  SNN_model.py
neurobench/: .gitignore  README.md  object_detection.py  utils.py
neurobench/accumulators/: __init__.py  accumulator.py
neurobench/benchmarks/: MackeyGlass-ESN_taus.py  __init__.py  benchmark.py  benchmark_ann.py  benchmark_closed_loop.py  benchmark_lstm.py  data_metrics.py  example_ann.py  example_snn.py  fscil_benchmark.py  hooks.py  hyperparams.yaml  hyperparams_ann.yaml  hyperparams_snn.yaml  lstm_eval.py  lstm_train.py  main.py  metrics.py  static_metrics.py  utils.py  workload_metrics.py
neurobench/blocks/: activation.py  layer.py
neurobench/datasets/: DVSGesture_loader.py  EEG.py  IncrementalFewShot.py  MSWC.py  MSWC_IncrementalLoader.py  MSWC_dataset.py  MSWC_multilingual.py  MultilingualIncFewShot.py  WISDM.py  WISDM_loader.py  __init__.py  csv2splits.ipynb  dataset.py  dvs_gesture.py  label_map_dictionary.json  mackey_glass.py  mackey_glass_cleaned.py  mackey_glass_parameters.csv  megapixel_automotive.py  primate_reaching.py  speech_commands.py  utils.py
neurobench/envs/: __init__.py  ops.py
neurobench/examples/: NeHAR.ipynb  benchmark_model.py  cl_base_example.py  cl_example.py  cl_utils.py  debug_MFCC.ipynb  dvs_gesture.py  gsc.py  human_activity_recognition.py  mackey_glass.py  mswc_fscil.py  mswc_fscil_metatrain.py  obj_detection.py  primate_reaching.py
neurobench/hooks/: layer.py  neuron.py
neurobench/models/: ANN_Arindam.py  LSTM_model.py  M5.py  OmniglotCNN.py  SNN_baseline_ETH.py  TCN.py  __init__.py  detection_backbone.py  echo_state_network.py  fscil_model.py  model.py  neurobench_model.py  numpy_model.py  snn_utils.py  snntorch_models.py  torch_model.py  utils.py
neurobench/postprocessing/: __init__.py  postprocessor.py
neurobench/preprocessing/: __init__.py  mfcc.py  preprocessor.py  primate_reaching.py  speech2spikes.py
neurobench/src/: data_utils.py  od_module.py  od_trainer.py  preprocess.py  utils.py
neurobench/staged_tasks/: README.md  Staged_Metric_Benchmark.py
neurobench/utils/: Dict2Class.py  __init__.py
object_detection/: README.md  dataset.py  model.py  train.py
tests/: test_accumulators.py  test_datasets.py  test_frameworks.py  test_mackeyglass.py  test_metrics.py  test_models.py
tests/models/: model_list.py
tests/test_preprocessors/: test_mfcc.py  test_speech2spikes.py
utils/: data_processing.py  early_stop.py
(+256 files in other folders)
