[tool.poetry]
name = "neurobench"
version = "1.0.3"
description = "Collaborative, Fair, and Representative Benchmarks for Neuromorphic Computing"
authors = ["NeuroBench Team <neurobench@googlegroups.com>"]
readme = "README.rst"
exclude = ["docs", "tests", "neurobench/examples"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
torch = "^2.0.1"
torchaudio = "^2.0.2"
tqdm = "^4.65.0"
tonic = "^1.4.0"
numba = "^0.57.1"
llvmlite = "^0.40.1"
snntorch = {version = "^0.7.0"}
jitcdde = {version = "^1.8.1", optional = true}
pytorch-lightning = {version = "^1.4.0", optional = true}
gdown = {version = "^4.7.1", optional = true}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
jitcdde = "^1.8.1"
pytorch-lightning = "^1.4.0"
gdown = "^4.7.1"
librosa = "^0.10.1"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
pre-commit = "*"

[tool.poetry.extras]
mackey-glass = ["jitcdde"]
nehar = ["pytorch-lightning", "gdown"]

[tool.black]
exclude = '/examples/'

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
current_version = "1.0.3"
ignore_missing_version = false
search = "{current_version}"
replace = "{new_version}"
tag = false
sign_tags = false
tag_name = "{new_version}"
tag_message = "Bump version: {version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "{version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "{release}"
replace = "{new_version}"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
