[metadata]
name = neurobench
version = 0.0.1
author = NeuroBench team
description = Benchmark harness and baseline results for the NeuroBench algorithms track.
long_description = file: README.md
keywords = snn, spiking neural network, benchmark, neurobench, ann, artificial neural network, pytorch

[options]
python_requires = >=3.9
install_requires =
    torch
    torchaudio
    tqdm

packages=find:
